overflow problem fixed

--- a/src/app/Components/Searchbar/Searchbar.module.scss
+++ b/src/app/Components/Searchbar/Searchbar.module.scss
@@ -11,7 +11,7 @@
   border: 1px solid white;
   border-radius: 0.5rem;
   transition: 0.3s;
-
+  overflow: hidden;
   input {
     padding: 0.5rem 1rem 0.5rem 1rem;
 
